apps/portfolio/base/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: portfolio
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: default
  hostnames:
    - good-robert.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: portfolio-prod
          port: 80
